# sift

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  sift-github.pem
.github/workflows/: pr-feedback.yml  pr-review.yml  sift-feedback-workflow.yml  sift-feedback.yml  sift-review-workflow.yml  sift-review.yml  user.yml
docs/: flows.md
docs/plans/: README.md  phase-1-foundation.md  phase-2-critic-severity.md  phase-3-holistic.md  phase-4-retrieval-agentic.md
eval/: README.md  run_eval.py  schema.py  secret_scan.py
eval/cases/: case_001.json  case_001_null_deref.py.diff  case_002.json  case_002_sql_injection.py.diff  case_003.json  case_003_breaking_signature.py.diff  case_004.json  case_004_resource_leak.py.diff  case_005.json  case_006.json  (+12 more)
scripts/: bench_env.sh  cleanup_comments.sh  full_sentry_run.sh  install-codeql.sh  install-linters.sh  smoke_test.sh
sift/: config.py  main.py
sift.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: config.py  main.py
tests/: test_agentic.py  test_analysis_routing.py  test_analyzers.py  test_candidates.py  test_capability.py  test_code_intel.py  test_critic.py  test_effort.py  test_footguns.py  test_forge_builder_registry.py  test_forge_extensibility.py  test_holistic.py  test_llm_client.py  test_pipeline_phase1.py  test_pyright_runner.py  test_retrieval.py  test_review_endpoint.py  test_review_quality_pr21.py  test_review_quality_pr23.py  test_review_quality_pr24.py  test_schema.py  test_severity.py  test_static_promote.py  test_version_detect.py
(+87 files in other folders)
