[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sift"
version = "0.5.2"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "semgrep>=1.0.0",
    "tree_sitter==0.21.3",
    "tree_sitter_languages==1.10.2",
    "ruff>=0.8.0",
    "bandit>=1.7.0",
    "pgvector>=0.3.0",
    "litellm==1.82.2",
    "boto3",
]

[tool.setuptools.packages.find]
include = ["sift*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
